oscar-mas-service-nginx-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-segundo-service-lb
  namespace: oscar-mas
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: mi-primer-deployment
