oscar-mas-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: mi-primer-service
  namespace: oscar-mas
  labels: 
     app: mi-primer-service
spec: 
  type: ClusterIP 
  selector: 
    app: mi-primer-deployment
  ports: 
    - port: 80 
      targetPort: 80
